Update mina signer build

--- a/packages/mina-signer/test/run.html
+++ b/packages/mina-signer/test/run.html
@@ -6,12 +6,9 @@
   <title>My Mina App</title>
 </head>
 <body>
-  <!-- Your HTML content -->
-
   <!-- Include the bundled script -->
-  <script src="dist/bundle.js"></script>
-  <script>
-    // use bundle in JavaScript code
-  </script>
+  <!-- <script src="../dist/main.js"></script> -->
+  <script src="../dist/main.js"></script>
+  <script src="./test.js"></script>
 </body>
 </html>
