Add account test

--- a/packages/mina-signer/test/run.html
+++ b/packages/mina-signer/test/run.html
@@ -9,6 +9,7 @@
   <!-- Include the bundled script -->
   <!-- <script src="../dist/main.js"></script> -->
   <script src="../dist/main.js"></script>
-  <script src="./test.js"></script>
+  <script  src="./data/account.js"></script>
+  <script  src="./test.js"></script>
 </body>
 </html>
