Add signMessage test

--- a/packages/mina-signer/test/run.html
+++ b/packages/mina-signer/test/run.html
@@ -10,6 +10,7 @@
   <!-- <script src="../dist/main.js"></script> -->
   <script src="../dist/main.js"></script>
   <script  src="./data/account.js"></script>
+  <script  src="./data/transaction.js"></script>
   <script  src="./test.js"></script>
 </body>
 </html>
