Update bundle name to bridge

--- a/packages/mina-signer/test/run.html
+++ b/packages/mina-signer/test/run.html
@@ -7,8 +7,7 @@
 </head>
 <body>
   <!-- Include the bundled script -->
-  <!-- <script src="../dist/main.js"></script> -->
-  <script src="../dist/main.js"></script>
+  <script src="../dist/bridge.js"></script>
   <script  src="./data/account.js"></script>
   <script  src="./data/transaction.js"></script>
   <script  src="./test.js"></script>
