--- a/packages/mina-signer/test/run.html
+++ b/packages/mina-signer/test/run.html
@@ -11,5 +11,6 @@
   <script  src="./data/account.js"></script>
   <script  src="./data/transaction.js"></script>
   <script  src="./test.js"></script>
+  <script  src="./encryption.js"></script>
 </body>
 </html>
